# mice_new

./: CMakeLists.txt  README.md
causality/: Symbolic_transfer_entropy.ipynb  main.ipynb  mice  sleep_awake.ipynb  sleep_stage.py
include/: mathematics.h  plot.h  utility.h
rebuild/group_average/: dfa_each_ndays.ipynb  plot.ipynb
rebuild/src/: doc.cpp  main.cpp  mathematics.cpp  plot.c  plot2.c  run.cpp  sync_filted.cpp  test.cpp  utility.cpp
rebuild/src/include/: mathematics.h  plot.h  sync_util.h  utility.h
src/: doc.cpp  main.cpp  mathematics.cpp  plot.cpp  test.cpp  utility.cpp
src/include/: mathematics.h  utility.h
